# feature-store

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: cli.py  config.py  main.py
src/api/: features.py  materialization.py  schemas.py
src/db/: postgres.py  redis_client.py
src/kafka/: consumer.py  messages.py  producer.py
src/materialization/: batch.py
src/models/: schemas.py
src/schema_registry/: compatibility.py  registry.py
src/store/: feature_registry.py  offline_store.py  online_store.py
tests/: test_online_store.py  test_point_in_time.py  test_schema_registry.py
